W5D4/javascript_p1.txt
> function mysteryScoping1() {
... 
... d
... }
undefined
> function mysteryScoping1() {
... var x = 'out of block';
... if (true) {
..... var x = 'in block';
..... console.log(x);
..... }
... console.log(x);
... }
undefined
> function mysteryScoping2() {
...   const x = 'out of block';
...   if (true) {
.....     const x = 'in block';  
.....     console.log(x);
.....   }
...   console.log(x);
... }
undefined
> function mysteryScoping3() {
...   const x = 'out of block';
...   if (true) {
.....     var x = 'in block';  
.....     console.log(x);
.....   }
...   console.log(x);
... }
undefined
> function mysteryScoping4() {
...   let x = 'out of block';
...   if (true) {
.....     let x = 'in block';  
.....     console.log(x);
.....   }
...   console.log(x);
... }
undefined
> function mysteryScoping5() {
...   let x = 'out of block';
...   if (true) {
.....     let x = 'in block';  
.....     console.log(x);
.....   }
...   let x = 'out of block again';
...   console.log(x);
... }
undefined
> mysteryScoping()
ReferenceError: mysteryScoping is not defined
    at repl:1:1
    at ContextifyScript.Script.runInThisContext (vm.js:50:33)
    at REPLServer.defaultEval (repl.js:240:29)
    at bound (domain.js:301:14)
    at REPLServer.runBound [as eval] (domain.js:314:12)
    at REPLServer.onLine (repl.js:441:10)
    at emitOne (events.js:121:20)
    at REPLServer.emit (events.js:211:7)
    at REPLServer.Interface._onLine (readline.js:282:10)
    at REPLServer.Interface._line (readline.js:631:8)
> run mysteryScoping(5)
run mysteryScoping(5)
    ^^^^^^^^^^^^^^

SyntaxError: Unexpected identifier

> run mysteryScoping1(5)
run mysteryScoping1(5)
    ^^^^^^^^^^^^^^^

SyntaxError: Unexpected identifier

> mysteryScoping1(5)
in block
in block
undefined
> mysteryScoping2(5)
in block
out of block
undefined
> mysteryScoping3(5)
SyntaxError: Identifier 'x' has already been declared

> mysteryScoping4(5)
in block
out of block
undefined
> mysteryScoping5(5)
SyntaxError: Identifier 'x' has already been declared

> function madLib(s1, s2, s3) {
... console.log("The " + s1 + " in " + s2 + " stay mainly on the " + s3);
... }
undefined
> mad
ReferenceError: mad is not defined
    at repl:1:1
    at ContextifyScript.Script.runInThisContext (vm.js:50:33)
    at REPLServer.defaultEval (repl.js:240:29)
    at bound (domain.js:301:14)
    at REPLServer.runBound [as eval] (domain.js:314:12)
    at REPLServer.onLine (repl.js:441:10)
    at emitOne (events.js:121:20)
    at REPLServer.emit (events.js:211:7)
    at REPLServer.Interface._onLine (readline.js:282:10)
    at REPLServer.Interface._line (readline.js:631:8)
> madLib("butter", "my butt", "butterflies")
The butter in my butt stay mainly on the butterflies
undefined
> madLib("ants", "France", "plants")
The ants in France stay mainly on the plants
undefined
> madLib("ants", "France", "plants")
The ants in France stay mainly on the plants
undefined
> function madLib(v, a, n) {
... var literal = "We will ${v} the ${a} ${n}";
... console.log(literal);
... }
undefined
> madLib("eat
madLib("eat
       ^^^^

SyntaxError: Invalid or unexpected token

> 
> madLib("eat", "biggest", "burgers")
We will ${v} the ${a} ${n}
undefined
> function madLib(v, a, n) {
... var literal = "We will " + v + " the " + a + " " + n;
... console.log(literal);
... }
undefined
> madLib("eat", "biggest", "burgers")
We will eat the biggest burgers
undefined
> function isSubstring(searchString) {
... }
undefined
> function isSubstring(searchString, subString) {
... var found = searchString.includes(subString);
... console.log(found);
... }
undefined
> isSubstring("time to program", "time")
true
undefined
> isSubstring("Jump for joy", "joys")
false
undefined
>
 function fizzBuzz(array) {
let newArray = [];
var idx = 0;
while (idx < array.length) {
		console.log(array[idx];
		if (array[idx] % 3 === 0 && array[idx] % 5 === 0) {
             	idx++;
       		continue;			 
   		}

  			if (array[idx] % 3 === 0 || array[idx] % 5 === 0) {
 			newArray.push(array[idx]);					
                   }

 			idx++;
 		}
	 return newArray;
 }


